--- a/index.html
+++ b/index.html
@@ -57,6 +57,107 @@
         </div>
     </section>
 
+    <section class="project">
+        <div class="project-container">
+            <h2 class="project-title">Featured Projects</h2>
+            <p class="project-text">Here are some of the selected projects that showcase my passion for front-end development.</p>
+
+            <div class="project-row">
+                <div class="project-col">
+                    <div class="project-col-left">
+                        <span class="project-col-left-type">Conceptual Work</span>
+                        <img class="project-col-left-img" src="./img/project/project-1.jpg" alt="project-1">
+                    </div>
+                    <div class="project-col-info">
+                        <h3 class="project-col-title">Promotional landing page for our favorite show</h3>
+                        <p class="project-col-text">Teamed up with a designer to breathe life into a promotional webpage for our beloved show, Adventure Time. Delivered a fully responsive design with dynamic content capabilities, seamlessly integrating a newsletter feature to keep fans updated with the latest adventures.</p>
+                        <h4 class="project-col-heading">Project Info</h4>
+                        <ul class="project-col-list">
+                            <li class="project-col-item">
+                                <span class="project-col-item-title">Year</span>
+                                <span class="project-col-item-value">2023</span>
+                            </li>
+                            <li class="project-col-item">
+                                <span class="project-col-item-title">Role</span>
+                                <span class="project-col-item-value">Front-end Developer</span>
+                            </li>
+                        </ul>
+
+                        <div class="project-col-see">
+                            <a href="#" class="project-col-link">
+                                Live Demo 
+                                <img src="./img/project/vector.svg" alt="project vector">
+                            </a>
+                            <a href="#" class="project-col-link">
+                                See on Github 
+                                <img src="./img/project/github.svg" alt="project github">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-col">
+                    <div class="project-col-left">
+                        <img class="project-col-left-img" src="./img/project/project-2.jpg" alt="project-1">
+                    </div>
+                    <div class="project-col-info">
+                        <h3 class="project-col-title">Blog site for World News</h3>
+                        <p class="project-col-text">Mastered CSS Grid complexities in building an innovative news homepage, navigating intricate design decisions for a seamless user experience. Leveraged the challenge to enhance skills in  front-end development.</p>
+                        <h4 class="project-col-heading">Project Info</h4>
+                        <ul class="project-col-list">
+                            <li class="project-col-item">
+                                <span class="project-col-item-title">Year</span>
+                                <span class="project-col-item-value">2023</span>
+                            </li>
+                            <li class="project-col-item">
+                                <span class="project-col-item-title">Role</span>
+                                <span class="project-col-item-value">Front-end Developer</span>
+                            </li>
+                        </ul>
+
+                        <div class="project-col-see">
+                            <a href="#" class="project-col-link">
+                                Live Demo 
+                                <img src="./img/project/vector.svg" alt="project vector">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-col">
+                    <div class="project-col-left">
+                        <span class="project-col-left-type">Challenge</span>
+                        <img class="project-col-left-img" src="./img/project/project-3.jpg" alt="project-1">
+                    </div>
+                    <div class="project-col-info">
+                        <h3 class="project-col-title">E-commerce product page</h3>
+                        <p class="project-col-text">Successfully crafted an engaging product page featuring a dynamic lightbox gallery and seamless cart functionality, showcasing proficiency in JavaScript development.</p>
+                        <h4 class="project-col-heading">Project Info</h4>
+                        <ul class="project-col-list">
+                            <li class="project-col-item">
+                                <span class="project-col-item-title">Year</span>
+                                <span class="project-col-item-value">2023</span>
+                            </li>
+                            <li class="project-col-item">
+                                <span class="project-col-item-title">Role</span>
+                                <span class="project-col-item-value">Front-end Developer</span>
+                            </li>
+                        </ul>
+
+                        <div class="project-col-see">
+                            <a href="#" class="project-col-link">
+                                Live Demo 
+                                <img src="./img/project/vector.svg" alt="project vector">
+                            </a>
+                            <a href="#" class="project-col-link">
+                                See on Github 
+                                <img src="./img/project/github.svg" alt="project github">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     
 
     <script src="./js/app.js"></script>
