--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+    <!-- Header start -->
     <header class="header">
         <div class="header-container">
             <a href="#" class="header-logo">
@@ -27,7 +28,9 @@
             </button>
         </div>
     </header>
+    <!-- Header end -->
 
+    <!-- Hero start -->
     <section class="hero">
         <div class="hero-container">
             <div class="hero-info">
@@ -56,7 +59,11 @@
             </div>
         </div>
     </section>
+    <!-- Hero end -->
 
+
+
+    <!-- Project start -->
     <section class="project">
         <div class="project-container">
             <h2 class="project-title">Featured Projects</h2>
@@ -157,6 +164,20 @@
             </div>
         </div>
     </section>
+    <!-- Project end -->
+
+    <section class="about">
+        <div class="about-container">
+            <h2 class="about-title">About me</h2>
+            <div class="about-info">
+                <h3 class="about-heading">I am a front-end developer based in Sydney. Has Mechanical Engineering background. </h3>
+                <p class="about-text">I am a front-end developer based in Sydney looking for exciting opportunities. Has Mechanical Engineering background. Likes to focus on accessibility when developing. Passionate and curious about solving problems. Currently, I’m exploring Reactjs, Webflow and a bit of Designing. While I am not programming, I enjoy playing football, photography and playing Valorant. Learning more to improve skill.</p>
+                <a class="about-link" href="#">More about me</a>
+                <img class="about-img" src="./img/about/img.png" alt="img">
+            </div>
+        </div>
+    </section>
+
 
     
 
