--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
         <div class="hero-container">
             <div class="hero-info">
                 <h2 class="hero-title">hi, i am <br>
-                robert garcia.</h2>
-                <p class="hero-text">A Sydney based front-end developer passionate about building accessible and user friendly websites.</p>
+                    robert garcia.</h2>
+                <p class="hero-text">A Sydney based front-end developer passionate about building accessible and user
+                    friendly websites.</p>
                 <div class="hero-contact">
                     <a class="hero-contact-tel" href="#">
-                        Contact Me 
+                        Contact Me
                         <span class="hero-contact-tel-span">
                             <img src="./img/hero/Vector.svg" alt="">
                         </span>
@@ -67,7 +68,8 @@
     <section class="project">
         <div class="project-container">
             <h2 class="project-title">Featured Projects</h2>
-            <p class="project-text">Here are some of the selected projects that showcase my passion for front-end development.</p>
+            <p class="project-text">Here are some of the selected projects that showcase my passion for front-end
+                development.</p>
 
             <div class="project-row">
                 <div class="project-col">
@@ -77,7 +79,10 @@
                     </div>
                     <div class="project-col-info">
                         <h3 class="project-col-title">Promotional landing page for our favorite show</h3>
-                        <p class="project-col-text">Teamed up with a designer to breathe life into a promotional webpage for our beloved show, Adventure Time. Delivered a fully responsive design with dynamic content capabilities, seamlessly integrating a newsletter feature to keep fans updated with the latest adventures.</p>
+                        <p class="project-col-text">Teamed up with a designer to breathe life into a promotional webpage
+                            for our beloved show, Adventure Time. Delivered a fully responsive design with dynamic
+                            content capabilities, seamlessly integrating a newsletter feature to keep fans updated with
+                            the latest adventures.</p>
                         <h4 class="project-col-heading">Project Info</h4>
                         <ul class="project-col-list">
                             <li class="project-col-item">
@@ -92,11 +97,11 @@
 
                         <div class="project-col-see">
                             <a href="#" class="project-col-link">
-                                Live Demo 
+                                Live Demo
                                 <img src="./img/project/vector.svg" alt="project vector">
                             </a>
                             <a href="#" class="project-col-link">
-                                See on Github 
+                                See on Github
                                 <img src="./img/project/github.svg" alt="project github">
                             </a>
                         </div>
@@ -108,7 +113,9 @@
                     </div>
                     <div class="project-col-info">
                         <h3 class="project-col-title">Blog site for World News</h3>
-                        <p class="project-col-text">Mastered CSS Grid complexities in building an innovative news homepage, navigating intricate design decisions for a seamless user experience. Leveraged the challenge to enhance skills in  front-end development.</p>
+                        <p class="project-col-text">Mastered CSS Grid complexities in building an innovative news
+                            homepage, navigating intricate design decisions for a seamless user experience. Leveraged
+                            the challenge to enhance skills in front-end development.</p>
                         <h4 class="project-col-heading">Project Info</h4>
                         <ul class="project-col-list">
                             <li class="project-col-item">
@@ -123,7 +130,7 @@
 
                         <div class="project-col-see">
                             <a href="#" class="project-col-link">
-                                Live Demo 
+                                Live Demo
                                 <img src="./img/project/vector.svg" alt="project vector">
                             </a>
                         </div>
@@ -136,7 +143,9 @@
                     </div>
                     <div class="project-col-info">
                         <h3 class="project-col-title">E-commerce product page</h3>
-                        <p class="project-col-text">Successfully crafted an engaging product page featuring a dynamic lightbox gallery and seamless cart functionality, showcasing proficiency in JavaScript development.</p>
+                        <p class="project-col-text">Successfully crafted an engaging product page featuring a dynamic
+                            lightbox gallery and seamless cart functionality, showcasing proficiency in JavaScript
+                            development.</p>
                         <h4 class="project-col-heading">Project Info</h4>
                         <ul class="project-col-list">
                             <li class="project-col-item">
@@ -151,11 +160,11 @@
 
                         <div class="project-col-see">
                             <a href="#" class="project-col-link">
-                                Live Demo 
+                                Live Demo
                                 <img src="./img/project/vector.svg" alt="project vector">
                             </a>
                             <a href="#" class="project-col-link">
-                                See on Github 
+                                See on Github
                                 <img src="./img/project/github.svg" alt="project github">
                             </a>
                         </div>
@@ -166,20 +175,75 @@
     </section>
     <!-- Project end -->
 
+    <!-- about start -->
     <section class="about">
         <div class="about-container">
             <h2 class="about-title">About me</h2>
             <div class="about-info">
-                <h3 class="about-heading">I am a front-end developer based in Sydney. Has Mechanical Engineering background. </h3>
-                <p class="about-text">I am a front-end developer based in Sydney looking for exciting opportunities. Has Mechanical Engineering background. Likes to focus on accessibility when developing. Passionate and curious about solving problems. Currently, I’m exploring Reactjs, Webflow and a bit of Designing. While I am not programming, I enjoy playing football, photography and playing Valorant. Learning more to improve skill.</p>
+                <h3 class="about-heading">I am a front-end developer based in Sydney. Has Mechanical Engineering
+                    background. </h3>
+                <p class="about-text">I am a front-end developer based in Sydney looking for exciting opportunities. Has
+                    Mechanical Engineering background. Likes to focus on accessibility when developing. Passionate and
+                    curious about solving problems. Currently, I’m exploring Reactjs, Webflow and a bit of Designing.
+                    While I am not programming, I enjoy playing football, photography and playing Valorant. Learning
+                    more to improve skill.</p>
                 <a class="about-link" href="#">More about me</a>
                 <img class="about-img" src="./img/about/img.png" alt="img">
             </div>
         </div>
     </section>
+    <!-- about end -->
+
+    <footer class="contact">
+        <div class="contact-container">
+            <div class="contact-info">
+                <h2 class="contact-title">Let’s connect</h2>
+                <p class="contact-text">Say hello at <a class="contact-text-link"
+                        href="mailto:robertgarcia@gmail.com">robertgarcia@gmail.com</a> <br>
+                    For more info, here’s my <a class="contact-text-link" download="CV"
+                        href="./img/contact/cv.JPG">resume</a></p>
+
+                <div class="contact-social">
+                    <a class="contact-social-link" target="_blank" href="#"><img src="./img/contact/bxl-linkedin.svg"
+                            alt=""></a>
+                    <a class="contact-social-link" target="_blank" href="#"><img src="./img/contact/github.svg"
+                            alt=""></a>
+                    <a class="contact-social-link" target="_blank" href="#"><img src="./img/contact/linkedin.svg"
+                            alt=""></a>
+                    <a class="contact-social-link" target="_blank" href="#"><img src="./img/contact/instagram.svg"
+                            alt=""></a>
+                </div>
+            </div>
+            <form action="#" class="contact-form">
+                <div class="contact-form-item">
+                    <label class="contact-form-item-title" for="name">Name</label>
+                    <input class="contact-form-item-input" id="name" name="name" type="text" required>
+                </div>
+                <div class="contact-form-item">
+                    <label class="contact-form-item-title" for="Email">Email</label>
+                    <input class="contact-form-item-input" id="Email" name="Email" type="text" required>
+                </div>
+                <div class="contact-form-item">
+                    <label class="contact-form-item-title" for="Subject">Subject</label>
+                    <input class="contact-form-item-input" id="Subject" name="Subject" type="text" required>
+                </div>
+                <div class="contact-form-item">
+                    <label class="contact-form-item-title" for="Message">Message</label>
+                    <textarea class="contact-form-item-textarea" name="Message" id="Message" required></textarea>
+                </div>
+                <button class="contact-form-btn">Submit</button>
+
+        </div>
+        </div>
+    </footer>
 
 
-    
+
+    <br><br><br><br>
+    <br><br><br><br>
+    <br><br><br><br>
+    <br><br><br><br>
+
 
     <script src="./js/app.js"></script>
 </body>
