--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                     <a class="contact-social-link" target="_blank" href="#"><img src="./img/contact/instagram.svg"
                             alt=""></a>
                 </div>
+                <p class="connect-person-name">© 2023 Robert Garcia</p>
             </div>
             <form action="#" class="contact-form">
                 <div class="contact-form-item">
@@ -231,9 +232,12 @@
                     <label class="contact-form-item-title" for="Message">Message</label>
                     <textarea class="contact-form-item-textarea" name="Message" id="Message" required></textarea>
                 </div>
+              <div>
                 <button class="contact-form-btn">Submit</button>
-
-        </div>
+              </div>
+              
+              <p class="connect-person-name-2">© 2023 Robert Garcia</p>
+            </div>
         </div>
     </footer>
 
